--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.heading{
+  font-family: 'Impact';
+  font-size: 72px;
+  margin-top: 80px;
+  margin-bottom: 80px; 
+}
